Redo some translations